--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
 
             <!-- Logo izquierda -->
-            <img src="../img/logo.png" alt="logo cuadrado" class="logo">
+            <img src="img/logo.png" alt="logo cuadrado" class="logo">
 
             <!-- Menú -->
             <ul class="menu">
@@ -258,5 +258,6 @@
     <script src="js/navbar.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 
 </html>
