--- a/pages/Proyectos.html
+++ b/pages/Proyectos.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/proyectos-style.css">
-  <title>Nosotros</title>
+  <title>Proyectos</title>
 </head>
 
 <body>
@@ -110,5 +110,6 @@
       </script>
   </footer>
 </body>
+
 
 </html>
