--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
                                     src="img/facebook.png" alt="Facebook" class="icon"></a></li>
                         <li><a href="https://www.instagram.com/venom_master62/?hl=es" target="_blank"><img
                                     src="img/instagram.png" alt="Instagram" class="icon"></a></li>
-                        <li><a href="https://linkedin.com" target="_blank"><img src="img/linkedin.png" alt="LinkedIn"
+                        <li><a href="https://www.linkedin.com/in/sebastian-honores-6861b81b3" target="_blank"><img src="img/linkedin.png" alt="LinkedIn"
                                     class="icon"></a></li>
-                        <li><a href="https://github.com" target="_blank"><img src="img/github.png" alt="GitHub"
+                        <li><a href="https://github.com/SevbasHonores" target="_blank"><img src="img/github.png" alt="GitHub"
                                     class="icon"></a></li>
                     </ul>
 
@@ -262,5 +262,6 @@
 
 
 </html>
+
 
 
