--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -83,9 +83,9 @@
                                     src="../img/facebook.png" alt="Facebook" class="icon"></a></li>
                         <li><a href="https://www.instagram.com/venom_master62/?hl=es" target="_blank"><img
                                     src="../img/instagram.png" alt="Instagram" class="icon"></a></li>
-                        <li><a href="https://linkedin.com" target="_blank"><img src="../img/linkedin.png" alt="LinkedIn"
+                        <li><a href="https://www.linkedin.com/in/sebastian-honores-6861b81b3" target="_blank"><img src="../img/linkedin.png" alt="LinkedIn"
                                     class="icon"></a></li>
-                        <li><a href="https://github.com" target="_blank"><img src="../img/github.png" alt="GitHub"
+                        <li><a href="https://github.com/SevbasHonores" target="_blank"><img src="../img/github.png" alt="GitHub"
                                     class="icon"></a>
                         </li>
                     </ul>
@@ -106,3 +106,4 @@
 
 
 </html>
+
