--- a/pages/Proyectos.html
+++ b/pages/Proyectos.html
@@ -93,9 +93,9 @@
                   alt="Facebook" class="icon"></a></li>
             <li><a href="https://www.instagram.com/venom_master62/?hl=es" target="_blank"><img
                   src="../img/instagram.png" alt="Instagram" class="icon"></a></li>
-            <li><a href="https://linkedin.com" target="_blank"><img src="../img/linkedin.png" alt="LinkedIn"
+            <li><a href="https://www.linkedin.com/in/sebastian-honores-6861b81b3" target="_blank"><img src="../img/linkedin.png" alt="LinkedIn"
                   class="icon"></a></li>
-            <li><a href="https://github.com" target="_blank"><img src="../img/github.png" alt="GitHub" class="icon"></a>
+            <li><a href="https://github.com/SevbasHonores" target="_blank"><img src="../img/github.png" alt="GitHub" class="icon"></a>
             </li>
           </ul>
 
@@ -114,4 +114,5 @@
 
 
 </html>
+
 
